# CV

./: .gitignore  CLAUDE.md  app.js  index.html  server.py  sitemap.xml  sonic-converter-prompt.md  sonic_converter.js  sonic_converter_bg.wasm  style.css  vercel.json
.claude/: launch.json  settings.local.json
.claude/plans/: unified-sniffing-meteor.md
about/: index.html
alternatives/: index.html  template.html
alternatives/audacity/: index.html
alternatives/cloudconvert/: index.html
alternatives/convertio/: index.html
alternatives/freeconvert/: index.html
alternatives/online-convert/: index.html
api/: api.css  index.html
api/get-key/: get-key.css  index.html
blog/: index.html
blog/audio-formats-for-game-development/: index.html
blog/audio-formats-for-podcasters/: index.html
blog/batch-convert-mp3-to-wav/: index.html
blog/mp3-to-wav-for-daws/: index.html
blog/mp3-to-wav-for-vinyl-cutting/: index.html
blog/mp3-vs-flac-vs-wav/: index.html
blog/privacy-in-audio-conversion/: index.html
blog/wav-vs-mp3-music-production/: index.html
blog/webassembly-audio-tools/: index.html
blog/why-uncompressed-audio-matters/: index.html
docs/plans/: 2026-03-09-phase1-foundation-design.md  2026-03-09-phase1-foundation.md  2026-03-09-phase2-seo-growth-design.md  2026-03-09-phase3-features.md  2026-03-11-disable-api-db-design.md  2026-03-11-disable-api-db-plan.md
faq/: index.html
privacy/: index.html
sonic-converter/: Cargo.toml  Dockerfile
sonic-converter/benches/: conversion.rs
sonic-converter/src/: error.rs  lib.rs  types.rs
sonic-converter/src/decoder/: mod.rs
sonic-converter/src/encoder/: mod.rs  wav.rs
sonic-converter/src/pipeline/: batch.rs  mod.rs  stream.rs
sonic-converter/src/server/: main.rs  webhook.rs
sonic-converter/src/wasm/: mod.rs
src/components/: About.astro  Contact.astro  EnergyBeam.astro  Experience.astro  Hero.astro  LetsWorkTogether.astro  Navbar.astro  ProfileBlock.astro  Skills.astro  Work.astro
src/data/: experience.ts  work.ts
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/scripts/: animations.ts  black-hole.ts  flow-field.ts  globe.ts  particle-text.ts
src/styles/: global.css
terms/: index.html
